--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A course project",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "compile.sass": "node-sass sass/main.scss css/style.css -w"
   },
   "author": "Gilberto Espinoso",
   "license": "ISC",
