--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "description": "A course project",
   "main": "index.js",
   "scripts": {
-    "compile.sass": "node-sass sass/main.scss css/style.css -w"
+    "watch:sass": "node-sass sass/main.scss css/style.css -w",
+    "compile:sass": "node-sass sass/main.scss css/style.comp.css"
   },
   "author": "Gilberto Espinoso",
   "license": "ISC",
   "devDependencies": {
+    "concat": "^1.0.3",
     "node-sass": "^9.0.0"
   }
 }
