--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "autoprefixer": "^10.4.20",
     "concat": "^1.0.3",
-    "node-sass": "^9.0.0"
+    "node-sass": "^9.0.0",
+    "postcss-cli": "^11.0.0"
   }
 }
